--- a/index.html
+++ b/index.html
@@ -4,14 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Web Studio</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">
-          <img src="./images/logo-1.jpg" alt="logo" width="115" height="24" />
-        </a>
+        <a href="./index.html">WebStudio</a>
         <ul></ul>
         <li><a href="">Studio</a></li>
         <li><a href="">Portfolio</a></li>
@@ -137,13 +135,13 @@
       </section>
 
       <!-- section 4 -->
-      <section>
-        <img src="./images/logo-1.jpg" alt="logo" width="115" height="24" />
+      <footer>
+        <a href="./index.html">WebStudio</a>
         <p>
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
-      </section>
+      </footer>
     </main>
   </body>
 </html>
