--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
     <header>
       <nav>
         <a href="./index.html">WebStudio</a>
-        <ul></ul>
-        <li><a href="">Studio</a></li>
-        <li><a href="">Portfolio</a></li>
-        <li><a href="">Contacts</a></li>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
       </nav>
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a></li>
+        </ul>
       </address>
     </header>
     <main>
@@ -25,6 +28,10 @@
       <section>
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
+      </section>
+
+      <!-- section 2 -->
+      <section>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -56,7 +63,8 @@
           </li>
         </ul>
       </section>
-      <!-- section 2 -->
+
+      <!-- section 3 -->
       <section>
         <h2>What are we doing</h2>
         <ul>
@@ -87,7 +95,7 @@
         </ul>
       </section>
 
-      <!-- section 3  -->
+      <!-- section 4  -->
       <section>
         <h2>Our Team</h2>
         <ul>
@@ -134,7 +142,7 @@
         </ul>
       </section>
 
-      <!-- section 4 -->
+      <!-- page footer -->
       <footer>
         <a href="./index.html">WebStudio</a>
         <p>
