--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+11(000)111-11-11">+11(000)111-11-11</a></li>
+          <li><a href="tel:+110001111111">+11(000)111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -31,7 +31,7 @@
       </section>
 
       <!-- section 2 -->
-      <h2 hidden>description</h2>
+      <h2>description</h2>
       <section>
         <ul>
           <li>
